--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ repositories {
 
 dependencies {
     implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.5.3.Final'
-//    implementation group: 'com.mchange', name: 'c3p0', version: '0.9.5.5'
+    implementation group: 'com.mchange', name: 'c3p0', version: '0.9.5.5'
     implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
