--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,8 @@ plugins {
 
 group 'de.geobe.architecture.persist'
 
-version '1.0'
+version '1.1-SNAPSHOT'
+
 
 repositories {
     mavenCentral()
@@ -13,6 +14,7 @@ repositories {
 
 dependencies {
     implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.5.3.Final'
+    implementation 'org.apache.logging.log4j:log4j-core:2.14.1'
     testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
